--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-router": "^3.0.4",
     "react-router-redux": "^4.0.8",
     "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.7.1"
+    "redux": "^3.7.1",
+    "redux-thunk": "2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
