--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.2.1",
     "jquery-slimscroll": "~1.3.8",
     "material-ui": "0.18.5",
+    "moment": "^2.18.1",
     "prop-types": "^15.5.10",
     "rc-queue-anim": "^1.0.4",
     "react": "^15.5.4",
